tests/ui/auto-traits/typeck-default-trait-impl-constituent-types-2.stderr
error[E0277]: the trait bound `MyS2: MyTrait` is not satisfied in `(MyS2, MyS)`
  --> $DIR/typeck-default-trait-impl-constituent-types-2.rs:17:18
   |
LL |     is_mytrait::<(MyS2, MyS)>();
   |                  ^^^^^^^^^^^ unsatisfied trait bound
   |
help: within `(MyS2, MyS)`, the trait `MyTrait` is not implemented for `MyS2`
  --> $DIR/typeck-default-trait-impl-constituent-types-2.rs:8:1
   |
LL | struct MyS2;
   | ^^^^^^^^^^^
   = note: required because it appears within the type `(MyS2, MyS)`
note: required by a bound in `is_mytrait`
  --> $DIR/typeck-default-trait-impl-constituent-types-2.rs:12:18
   |
LL | fn is_mytrait<T: MyTrait>() {}
   |                  ^^^^^^^ required by this bound in `is_mytrait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
